--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -2747,6 +2747,7 @@ _customEmojisManager:
     deleteSelectionRanges: "Delete rows in the selection"
     searchSettings: "Search settings"
     searchSettingCaption: "Set detailed search criteria."
+    searchLimit: ""
     sortOrder: "Sort order"
     registrationLogs: "Registration log"
     registrationLogsCaption: "Logs will be displayed when updating or deleting Emojis. They will disappear after updating or deleting them, moving to a new page, or reloading."
@@ -2771,8 +2772,11 @@ _customEmojisManager:
       markAsDeleteTargetRanges: "Mark rows in the selection as a target to delete"
       alertUpdateEmojisNothingDescription: "There are no updated Emojis."
       alertDeleteEmojisNothingDescription: "There are no Emojis to be deleted."
+      confirmMovePage: ""
+      confirmChangeView: ""
       confirmUpdateEmojisDescription: "Update {count} Emoji(s). Are you sure to continue?"
       confirmDeleteEmojisDescription: "Delete checked {count} Emoji(s). Are you sure to continue?"
+      confirmResetDescription: ""
       dialogSelectRoleTitle: "Search by roll set in Emojis"
     _register:
       uploadSettingTitle: "Upload settings"
