--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -2798,6 +2798,7 @@ _moderationLogTypes:
   deletePage: "ページを削除"
   deleteFlash: "Playを削除"
   deleteGalleryPost: "ギャラリーの投稿を削除"
+  deleteChatRoom: "チャットルームを削除"
   updateProxyAccountDescription: "プロキシアカウントの説明を更新"
 
 _fileViewer:
