--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1408,6 +1408,7 @@ _settings:
   timelineAndNote: "Timeline and note"
   makeEveryTextElementsSelectable: "Make all text elements selectable"
   makeEveryTextElementsSelectable_description: "Enabling this may reduce usability in some situations."
+  useStickyIcons: "Make icons follow while scrolling"
   showNavbarSubButtons: "Show sub-buttons on the navigation bar"
   ifOn: "When turned on"
   ifOff: "When turned off"
