New Crowdin updates (#15740)
* New translations ja-jp.yml (Russian)

* New translations ja-jp.yml (Catalan)

* New translations ja-jp.yml (Korean)

* New translations ja-jp.yml (Portuguese)

* New translations ja-jp.yml (Chinese Traditional)

* New translations ja-jp.yml (English)

* New translations ja-jp.yml (Japanese, Kansai)

* New translations ja-jp.yml (French)

* New translations ja-jp.yml (Spanish)

* New translations ja-jp.yml (Arabic)

* New translations ja-jp.yml (Czech)

* New translations ja-jp.yml (German)

* New translations ja-jp.yml (Italian)

* New translations ja-jp.yml (Polish)

* New translations ja-jp.yml (Slovak)

* New translations ja-jp.yml (Ukrainian)

* New translations ja-jp.yml (Chinese Simplified)

* New translations ja-jp.yml (Vietnamese)

* New translations ja-jp.yml (Indonesian)

* New translations ja-jp.yml (Bengali)

* New translations ja-jp.yml (Thai)

* New translations ja-jp.yml (Uzbek)

* New translations ja-jp.yml (Korean (Gyeongsang))

* New translations ja-jp.yml (Catalan)

* New translations ja-jp.yml (Chinese Traditional)

* New translations ja-jp.yml (Chinese Traditional)

* New translations ja-jp.yml (Chinese Simplified)

* New translations ja-jp.yml (Catalan)

* New translations ja-jp.yml (Italian)

* New translations ja-jp.yml (English)

* New translations ja-jp.yml (Chinese Traditional)

--- a/locales/ca-ES.yml
+++ b/locales/ca-ES.yml
@@ -424,6 +424,7 @@ antennaExcludeBots: "Exclou els bots"
 antennaKeywordsDescription: "Separar amb espais per la condició AND o amb salts de línia per la condició OR."
 notifyAntenna: "Notifica'm les publicacions noves"
 withFileAntenna: "Només les publicacions amb fitxers"
+hideNotesInSensitiveChannel: "Amaga les notes a canals sensibles "
 enableServiceworker: "Activar les notificacions al navegador"
 antennaUsersDescription: "Llistar un nom d'usuari per línia"
 caseSensitive: "Sensible a majúscules i minúscules "
@@ -1339,6 +1340,7 @@ compress: "Comprimir "
 right: "Dreta"
 bottom: "A baix "
 top: "A dalt "
+embed: "Incrustar"
 _chat:
   noMessagesYet: "Encara no tens missatges "
   newMessage: "Missatge nou"
@@ -1413,6 +1415,7 @@ _settings:
   showNavbarSubButtons: "Mostrar sub botons a la barra de navegació "
   ifOn: "Quan s'encén "
   ifOff: "Quan s'apaga "
+  enableSyncThemesBetweenDevices: "Sincronitzar els temes instal·lats entre dispositius"
   _chat:
     showSenderName: "Mostrar el nom del remitent"
     sendOnEnter: "Introdueix per enviar"
@@ -2122,7 +2125,6 @@ _theme:
     header: "Capçalera"
     navBg: "Fons de la barra lateral"
     navFg: "Text de la barra lateral"
-    navHoverFg: "Text barra lateral (en passar per sobre)"
     navActive: "Text barra lateral (actiu)"
     navIndicator: "Indicador barra lateral"
     link: "Enllaç"
@@ -2145,11 +2147,8 @@ _theme:
     buttonHoverBg: "Fons botó (en passar-hi per sobre)"
     inputBorder: "Contorn del cap d'introducció "
     driveFolderBg: "Fons de la carpeta Disc"
-    wallpaperOverlay: "Superposició del fons de pantalla "
     badge: "Insígnia "
     messageBg: "Fons del xat"
-    accentDarken: "Accent (fosc)"
-    accentLighten: "Accent (clar)"
     fgHighlighted: "Text ressaltat"
 _sfx:
   note: "Notes"
