--- a/locales/it-IT.yml
+++ b/locales/it-IT.yml
@@ -424,6 +424,7 @@ antennaExcludeBots: "Escludere i Bot"
 antennaKeywordsDescription: "Sparando con uno spazio indichi la condizione E (and). Separando con un a capo, indichi la condizione O (or)."
 notifyAntenna: "Invia notifiche delle nuove note"
 withFileAntenna: "Solo note con file in allegato"
+hideNotesInSensitiveChannel: "Nascondere le Note dai canali espliciti"
 enableServiceworker: "Abilita ServiceWorker"
 antennaUsersDescription: "Elenca un nome utente per riga"
 caseSensitive: "Sensibile alla distinzione tra maiuscole e minuscole"
@@ -1336,6 +1337,10 @@ chat: "Chat"
 migrateOldSettings: "Migrare le vecchie impostazioni"
 migrateOldSettings_description: "Di solito, viene fatto automaticamente. Se per qualche motivo non fossero migrate con successo, è possibile avviare il processo di migrazione manualmente, sovrascrivendo le configurazioni attuali."
 compress: "Comprimi"
+right: "Destra"
+bottom: "Sotto"
+top: "Sopra"
+embed: "Incorporare"
 _chat:
   noMessagesYet: "Ancora nessun messaggio"
   newMessage: "Nuovo messaggio"
@@ -1406,9 +1411,11 @@ _settings:
   timelineAndNote: "Note e Timeline"
   makeEveryTextElementsSelectable: "Imposta ogni elemento come selezionabile"
   makeEveryTextElementsSelectable_description: "Potrebbe ridurre l'usabilità in alcune situazioni."
+  useStickyIcons: "Fissa le icone durante lo scorrimento"
   showNavbarSubButtons: "Mostra i pulsanti secondari nella barra di navigazione"
   ifOn: "Quando attivato"
   ifOff: "Quando disattivato"
+  enableSyncThemesBetweenDevices: "Sincronizzare il tema tra i dispositivi"
   _chat:
     showSenderName: "Mostra il nome del mittente"
     sendOnEnter: "Invio spedisce"
@@ -2118,14 +2125,13 @@ _theme:
     header: "Intestazione"
     navBg: "Sfondo della barra laterale"
     navFg: "Testo della barra laterale"
-    navHoverFg: "Testo della barra laterale (al passaggio del mouse)"
     navActive: "Testo della barra laterale (attivo)"
     navIndicator: "Indicatore di barra laterale"
     link: "Link"
     hashtag: "Hashtag"
     mention: "Menzioni"
     mentionMe: "Menzioni (di me)"
-    renote: "Rinota"
+    renote: "Renota"
     modalBg: "Sfondo modale."
     divider: "Interruzione di linea"
     scrollbarHandle: "Maniglie della barra di scorrimento"
@@ -2141,11 +2147,8 @@ _theme:
     buttonHoverBg: "Sfondo del pulsante (sorvolato)"
     inputBorder: "Inquadra casella di testo"
     driveFolderBg: "Sfondo della cartella di disco"
-    wallpaperOverlay: "Sovrapposizione dello sfondo"
     badge: "Distintivo"
     messageBg: "Sfondo della chat"
-    accentDarken: "Temi (scuri)"
-    accentLighten: "Temi (luminosi)"
     fgHighlighted: "Testo in evidenza."
 _sfx:
   note: "Nota"
@@ -2592,6 +2595,9 @@ _notification:
 _deck:
   alwaysShowMainColumn: "Mostra sempre la colonna principale"
   columnAlign: "Allineare colonne"
+  columnGap: "Margine tra le colonne"
+  deckMenuPosition: "Posizione del menu Deck"
+  navbarPosition: "Posizione barra di navigazione"
   addColumn: "Aggiungi colonna"
   newNoteNotificationSettings: "Preferenze per le notifiche di nuove Note"
   configureColumn: "Impostazioni colonna"
