--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -424,6 +424,7 @@ antennaExcludeBots: "Exclude bot accounts"
 antennaKeywordsDescription: "Separate with spaces for an AND condition or with line breaks for an OR condition."
 notifyAntenna: "Notify about new notes"
 withFileAntenna: "Only notes with files"
+hideNotesInSensitiveChannel: "Hide notes from sensitive channels"
 enableServiceworker: "Enable Push-Notifications for your Browser"
 antennaUsersDescription: "List one username per line"
 caseSensitive: "Case sensitive"
@@ -1341,6 +1342,7 @@ compress: "Compress"
 right: "Right"
 bottom: "Bottom"
 top: "Top"
+embed: "Embed"
 _chat:
   noMessagesYet: "No messages yet"
   newMessage: "New message"
@@ -1415,6 +1417,7 @@ _settings:
   showNavbarSubButtons: "Show sub-buttons on the navigation bar"
   ifOn: "When turned on"
   ifOff: "When turned off"
+  enableSyncThemesBetweenDevices: "Synchronize installed themes across devices"
   _chat:
     showSenderName: "Show sender's name"
     sendOnEnter: "Press Enter to send"
@@ -2124,7 +2127,6 @@ _theme:
     header: "Header"
     navBg: "Sidebar background"
     navFg: "Sidebar text"
-    navHoverFg: "Sidebar text (Hover)"
     navActive: "Sidebar text (Active)"
     navIndicator: "Sidebar indicator"
     link: "Link"
@@ -2147,11 +2149,8 @@ _theme:
     buttonHoverBg: "Button background (Hover)"
     inputBorder: "Input field border"
     driveFolderBg: "Drive folder background"
-    wallpaperOverlay: "Wallpaper overlay"
     badge: "Badge"
     messageBg: "Chat background"
-    accentDarken: "Accent (Darkened)"
-    accentLighten: "Accent (Lightened)"
     fgHighlighted: "Highlighted Text"
 _sfx:
   note: "New note"
