--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -424,6 +424,7 @@ antennaExcludeBots: "排除机器人账户"
 antennaKeywordsDescription: "AND 条件用空格分隔，OR 条件用换行符分隔。"
 notifyAntenna: "开启通知"
 withFileAntenna: "仅带有附件的帖子"
+hideNotesInSensitiveChannel: "隐藏敏感频道内的帖子"
 enableServiceworker: "启用 ServiceWorker"
 antennaUsersDescription: "指定用户名，一行一个"
 caseSensitive: "区分大小写"
@@ -1339,6 +1340,7 @@ compress: "压缩"
 right: "右"
 bottom: "下"
 top: "上"
+embed: "嵌入"
 _chat:
   noMessagesYet: "还没有消息"
   newMessage: "新消息"
@@ -2122,7 +2124,6 @@ _theme:
     header: "顶栏"
     navBg: "侧边栏背景"
     navFg: "侧栏文本"
-    navHoverFg: "侧栏文本（悬停）"
     navActive: "侧栏文本（活动）"
     navIndicator: "侧栏标记"
     link: "链接"
@@ -2145,11 +2146,8 @@ _theme:
     buttonHoverBg: "按钮背景（悬停）"
     inputBorder: "输入框边框"
     driveFolderBg: "网盘的文件夹背景"
-    wallpaperOverlay: "壁纸叠加层"
     badge: "徽章"
     messageBg: "聊天背景"
-    accentDarken: "强调色(深)"
-    accentLighten: "强调色(浅)"
     fgHighlighted: "高亮显示文本"
 _sfx:
   note: "帖子"
