New Crowdin updates (#15776)
* New translations ja-jp.yml (German)

* New translations ja-jp.yml (English)

* New translations ja-jp.yml (Korean)

* New translations ja-jp.yml (Chinese Simplified)

* New translations ja-jp.yml (Catalan)

* New translations ja-jp.yml (Catalan)

* New translations ja-jp.yml (Korean)

--- a/locales/de-DE.yml
+++ b/locales/de-DE.yml
@@ -1341,6 +1341,8 @@ right: "Rechts"
 bottom: "Unten"
 top: "Oben"
 embed: "Einbetten"
+settingsMigrating: "Ihre Einstellungen werden gerade migriert, Bitte warten Sie einen Moment... (Sie können die Einstellungen später auch manuell migrieren, indem Sie zu Einstellungen → Sonstiges → Alte Einstellungen migrieren gehen)"
+readonly: "Nur Lesezugriff"
 _chat:
   noMessagesYet: "Noch keine Nachrichten"
   newMessage: "Neue Nachricht"
@@ -1370,6 +1372,7 @@ _chat:
   muteThisRoom: "Raum stummschalten"
   deleteRoom: "Raum löschen"
   chatNotAvailableForThisAccountOrServer: "Der Chat ist auf diesem Server oder für dieses Konto nicht aktiviert."
+  chatIsReadOnlyForThisAccountOrServer: "Der Chat ist auf dieser Instanz oder diesem Konto nur zum Lesen freigegeben. Es ist nicht möglich, neue Nachrichten zu schreiben oder Chaträume zu erstellen oder zu betreten."
   chatNotAvailableInOtherAccount: "Die Chatfunktion wurde vom anderen Benutzer deaktiviert."
   cannotChatWithTheUser: "Starten eines Chats mit diesem Benutzer nicht möglich"
   cannotChatWithTheUser_description: "Der Chat ist entweder nicht verfügbar oder die andere Seite hat den Chat nicht aktiviert."
@@ -1930,6 +1933,7 @@ _role:
     canImportFollowing: "Importieren von Gefolgten zulassen"
     canImportMuting: "Importieren von Stummgeschalteten zulassen"
     canImportUserLists: "Importieren von Listen erlauben"
+    chatAvailability: "Chatten erlauben"
   _condition:
     roleAssignedTo: "Manuellen Rollen zugewiesen"
     isLocal: "Lokaler Benutzer"
