--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -1343,6 +1343,7 @@ top: "上"
 embed: "嵌入"
 settingsMigrating: "正在迁移设置，请稍候。（之后也可以在设置 → 其它 → 迁移旧设置来手动迁移）"
 readonly: "只读"
+goToDeck: "返回至 Deck"
 _chat:
   noMessagesYet: "还没有消息"
   newMessage: "新消息"
