New Crowdin updates (#15781)
* New translations ja-jp.yml (Korean)

* New translations ja-jp.yml (Catalan)

* New translations ja-jp.yml (German)

* New translations ja-jp.yml (Italian)

* New translations ja-jp.yml (Korean)

* New translations ja-jp.yml (Chinese Simplified)

* New translations ja-jp.yml (Chinese Traditional)

* New translations ja-jp.yml (English)

* New translations ja-jp.yml (German)

* New translations ja-jp.yml (Chinese Simplified)

* New translations ja-jp.yml (English)

* New translations ja-jp.yml (Korean)

* New translations ja-jp.yml (Korean)

* New translations ja-jp.yml (Korean)

* New translations ja-jp.yml (Catalan)

* New translations ja-jp.yml (Korean)

--- a/locales/ca-ES.yml
+++ b/locales/ca-ES.yml
@@ -424,7 +424,7 @@ antennaExcludeBots: "Exclou els bots"
 antennaKeywordsDescription: "Separar amb espais per la condició AND o amb salts de línia per la condició OR."
 notifyAntenna: "Notifica'm les publicacions noves"
 withFileAntenna: "Només les publicacions amb fitxers"
-hideNotesInSensitiveChannel: "Amaga les notes a canals sensibles "
+excludeNotesInSensitiveChannel: "Excloure notes a canals sensibles"
 enableServiceworker: "Activar les notificacions al navegador"
 antennaUsersDescription: "Llistar un nom d'usuari per línia"
 caseSensitive: "Sensible a majúscules i minúscules "
