--- a/locales/de-DE.yml
+++ b/locales/de-DE.yml
@@ -424,7 +424,7 @@ antennaExcludeBots: "Bot-Accounts ausschließen"
 antennaKeywordsDescription: "Zum Nutzen einer \"UND\"-Verknüpfung Einträge mit Leerzeichen trennen, zum Nutzen einer \"ODER\"-Verknüpfung Einträge mit einem Zeilenumbruch trennen"
 notifyAntenna: "Über neue Notizen benachrichtigen"
 withFileAntenna: "Nur Notizen mit Dateien"
-hideNotesInSensitiveChannel: "Verstecke Notizen von sensitive Kanäle"
+excludeNotesInSensitiveChannel: "Schließe Notizen von sensitive Kanäle aus"
 enableServiceworker: "Push-Benachrichtigungen im Browser aktivieren"
 antennaUsersDescription: "Benutzernamen getrennt durch Zeilenumbrüche angeben"
 caseSensitive: "Groß-/Kleinschreibung unterscheiden"
@@ -1343,6 +1343,7 @@ top: "Oben"
 embed: "Einbetten"
 settingsMigrating: "Ihre Einstellungen werden gerade migriert, Bitte warten Sie einen Moment... (Sie können die Einstellungen später auch manuell migrieren, indem Sie zu Einstellungen → Sonstiges → Alte Einstellungen migrieren gehen)"
 readonly: "Nur Lesezugriff"
+goToDeck: "Zurück zum Deck"
 _chat:
   noMessagesYet: "Noch keine Nachrichten"
   newMessage: "Neue Nachricht"
