--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -424,7 +424,7 @@ antennaExcludeBots: "排除机器人账户"
 antennaKeywordsDescription: "AND 条件用空格分隔，OR 条件用换行符分隔。"
 notifyAntenna: "开启通知"
 withFileAntenna: "仅带有附件的帖子"
-hideNotesInSensitiveChannel: "隐藏敏感频道内的帖子"
+excludeNotesInSensitiveChannel: "排除敏感频道内的帖子"
 enableServiceworker: "启用 ServiceWorker"
 antennaUsersDescription: "指定用户名，一行一个"
 caseSensitive: "区分大小写"
