--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -2427,6 +2427,7 @@ _widgets:
     chooseList: "リストを選択"
   clicker: "クリッカー"
   birthdayFollowings: "今日誕生日のユーザー"
+  chat: "チャット"
 
 _cw:
   hide: "隠す"
