--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1346,6 +1346,8 @@ embed: "Embed"
 settingsMigrating: "Settings are being migrated, please wait a moment... (You can also migrate manually later by going to Settings→Others→Migrate old settings)"
 readonly: "Read only"
 goToDeck: "Return to Deck"
+federationJobs: "Federation Jobs"
+driveAboutTip: "In Drive, a list of files you've uploaded in the past will be displayed. <br>  \nYou can reuse these files when attaching them to notes, or you can upload files in advance to post later. <br>  \n<b>Be careful when deleting a file, as it will not be available in all places where it was used (such as notes, pages, avatars, banners, etc.).</b> <br>  \nYou can also create folders to organize your files."
 _chat:
   noMessagesYet: "No messages yet"
   newMessage: "New message"
