--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1430,6 +1430,7 @@ _settings:
   ifOn: "オンのとき"
   ifOff: "オフのとき"
   enableSyncThemesBetweenDevices: "デバイス間でインストールしたテーマを同期"
+  enablePullToRefresh: "ひっぱって更新"
 
   _chat:
     showSenderName: "送信者の名前を表示"
