Back to Tweet Reload
ブランチハードリセットに伴う再適用

ない

--- a/locales/ca-ES.yml
+++ b/locales/ca-ES.yml
@@ -645,7 +645,7 @@ poll: "Enquesta"
 useCw: "Amaga el contingut"
 enablePlayer: "Obre el reproductor de vídeo"
 disablePlayer: "Tanca el reproductor de vídeo"
-expandTweet: "Expandir post"
+expandTweet: "Expandir tweet"
 themeEditor: "Editor de temes"
 description: "Descripció"
 describeFile: "Afegeix una descripció "
