--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -645,7 +645,7 @@ poll: "Poll"
 useCw: "Hide content"
 enablePlayer: "Open video player"
 disablePlayer: "Close video player"
-expandTweet: "Expand post"
+expandTweet: "Expand tweet"
 themeEditor: "Theme editor"
 description: "Description"
 describeFile: "Add alt text"
