--- a/locales/ja-KS.yml
+++ b/locales/ja-KS.yml
@@ -639,7 +639,7 @@ poll: "アンケート"
 useCw: "内容を隠す"
 enablePlayer: "プレイヤー開く"
 disablePlayer: "プレイヤー閉じる"
-expandTweet: "ポスト展開しとく"
+expandTweet: "ツイート展開しとく"
 themeEditor: "テーマエディター"
 description: "説明"
 describeFile: "キャプションを付ける"
