--- a/locales/nl-NL.yml
+++ b/locales/nl-NL.yml
@@ -641,7 +641,7 @@ poll: "Peiling"
 useCw: "Inhoudswaarschuwing gebruiken"
 enablePlayer: "Videospeler openen"
 disablePlayer: "Videospeler sluiten"
-expandTweet: "Notitie uitklappen"
+expandTweet: "Tweet uitbreiden"
 themeEditor: "Thema-editor"
 description: "Beschrijving"
 describeFile: "Beschrijving toevoegen"
