--- a/locales/ru-RU.yml
+++ b/locales/ru-RU.yml
@@ -642,7 +642,7 @@ poll: "Опрос"
 useCw: "Скрывать содержимое под предупреждением"
 enablePlayer: "Включить проигрыватель"
 disablePlayer: "Выключить проигрыватель"
-expandTweet: "Развернуть заметку"
+expandTweet: "Развернуть твит"
 themeEditor: "Редактор темы оформления"
 description: "Описание"
 describeFile: "Добавить подпись"
