--- a/locales/uz-UZ.yml
+++ b/locales/uz-UZ.yml
@@ -563,7 +563,7 @@ poll: "So'ro'vnoma"
 useCw: "Kontentni yashirish"
 enablePlayer: "Video pleyerni ochish"
 disablePlayer: "Video pleyerni yopish"
-expandTweet: "Xabarni kengaytirish"
+expandTweet: "Tvitni oching"
 themeEditor: "Rang sxemasi muharriri"
 description: "tavsif"
 describeFile: "sarlavha qo'shing"
